--- a/1주차/2021-08-02.md
+++ b/1주차/2021-08-02.md
@@ -1,5 +1,6 @@
 ### 💡 모더레이터/팀원
 
+- 팀명: 123
 - 모더레이터 : 주차별로 돌아가기
 - 팀원: 김연주(5), 김민준(x), 안영진(1), 이승환(4), 차미경(2), 최성인(3) <총 6명>
 - Github List
@@ -48,8 +49,8 @@
 ### 💡 피어 규칙
 
 1. 피어세션에 참여 못할 경우 전날 자정 전까지 말하기 (자신이 모더레이터인 경우 대타도 구하기)
-2. 무단불참 1번째 기프티콘 5000원 이하/1인
-3. 무단지각(5분 초과) 3번째 기프티콘 5000원 이하/1인
+2. 무단불참 1번째 기프티콘 5000원 이하 쌓기
+3. 무단지각(5분 초과) 2회 누적시 기프티콘에 상당하는 금액 쌓기: 한 주에 두 명 지각하면 쌓는 게 나을 것 같음
 
 ### 협업툴 관리 역할 분배
 
@@ -57,13 +58,15 @@
 - Github Repository (안영진)
 - Calendar 관리 (김민준)
   - Google Group: temp-boostcamp-ai@googlegroups.com
-- Linter?: pep vs black
-- Editor?
-- .ipynb vs .py
-- Tabs vs spaces
+- Formatter?: black
+- Editor?: VSCode
+- .ipynb vs .py: Python(.py) 사용
+- Tabs vs spaces: 4 tabs
 
 ### 그라운드룰
 
+- 호칭: ~님으로 하는 거
+- 서로 존댓말로 의사소통하기
 - Slack: 답변을 할 때는 thread 최대한 많이 활용한다.
 - Calendar: 단, 매일매일 있는 피어세션은 Calendar 일정에 포함시키지 않는 걸로 함.
   - 김연주: yjookimcd@gmail.com
