--- a/1주차/2021-08-03.md
+++ b/1주차/2021-08-03.md
@@ -1,9 +1,9 @@
-### Assignment 해설
+### Assignment 팁
 
 ### Assignment 4
 
 - Assignment 4번 Baseball 문제가 난이도가 있다고 함.
-- 사용자가 입력한 값이 이상한 값일 때.  문자가 포함되어 있는 경우에 No input이라고 뜸.
+- 사용자가 입력한 값이 이상한 값일 때. 문자가 포함되어 있는 경우에 No input이라고 뜸.
 - Print 출력에서 걸리는 듯.
 - no input 찍고 종료하는 부분이 있잖아요. 유효하지 않은 값을 넣었을 때, print문 찍고 종료하면 되는데, 저 같은 경우는 try, except로 해서 처리를 했는데. 다른 분들은 어떻게 했는지.
 
@@ -12,8 +12,3 @@
 - 그래도 description이 깔끔해서 괜찮다.
 - 틀어놓고 과제하다가 중요한 것 같다 하면 체크하는 형식으로 강의를 소화하는 중
 - Main 문에서 처리할 때 대부분 flag 통해서 했거든요. Case들이 많아서 if문들 쓰는 걸 아끼기 위함임.
-
-
-
-
-
